# libvisca

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README  configure.ac
VC2005/: libvisca.sln
doc/: wiring.md
examples/: .gitignore  Makefile.am  testvisca.c  visca_cli.c  visca_info.c
trunk/libvisca/: ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.in
trunk/libvisca/VC2005/: .cvsignore  .cvswrappers  Makefile  Makefile.in
trunk/libvisca/examples/: Makefile.am  Makefile.in  testvisca.c  visca_cli.c
trunk/libvisca/libvisca-1.0.1/: Makefile.in
trunk/libvisca/libvisca-1.0.1/examples/: Makefile.am  Makefile.in  testvisca.c  visca_cli.c
trunk/libvisca/libvisca-1.0.1/src/: Makefile.am  Makefile.in
trunk/libvisca/src/: libvisca.c
trunk/libvisca/visca/: Makefile.in  libvisca.c  libvisca.h
visca/: .gitignore  Makefile.am  libvisca.c  libvisca.h  libvisca.pc.in  libvisca_avr.c  libvisca_posix.c  libvisca_win32.c
