MAINTAINERCLEANFILES = Makefile.in
noinst_PROGRAMS = testvisca visca_cli visca_info
AM_CPPFLAGS = -I$(top_srcdir)

testvisca_SOURCES = testvisca.c
testvisca_LDADD = ../visca/libvisca.la

visca_cli_SOURCES = visca_cli.c
visca_cli_LDADD = ../visca/libvisca.la

visca_info_SOURCES = visca_info.c
visca_info_LDADD = ../visca/libvisca.la
