# process this file with autoconf to get a configure script
AC_INIT(src/libvisca.c)

AM_INIT_AUTOMAKE(libvisca, 1.0.1)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

AC_TYPE_SIZE_T

AC_FUNC_MMAP

# set the libtool shared library version numbers
lt_major=1
lt_revision=0
lt_age=1

AC_SUBST(lt_major)
AC_SUBST(lt_revision)
AC_SUBST(lt_age)

CFLAGS="$CFLAGS -Wall -Wunused"
AC_OUTPUT([ Makefile src/Makefile examples/Makefile])
